- A separate Action has been written for serving all uploaded photos - Users can upload images to their profile - Images are now moved out of Play folder, so server does not have to be restarted after uploading new images - Update to an image now deletes the previous one - User id and timestamp for Forgot Password email are now encrypted - Apache's Base64 codec is now used instead of Sun's version